Fix spacing issue

--- a/web/src/stylesheets/public/templates/template-content-aside.scss
+++ b/web/src/stylesheets/public/templates/template-content-aside.scss
@@ -13,7 +13,7 @@
   @include breakpoint($bp-tablets-landscape) {
     float: left;
     width: 250px;
-    padding: 15px;
+    padding-top: 15px;
     padding-right: 10px;
   }
 }
